--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,14 @@
-tflib/nn/__pycache__/sn.cpython-36.pyc
 .DS_Store
-torch_GDM.py
-.vscode/launch.json
-.vscode/settings.json
-__pycache__/config.cpython-35.pyc
-__pycache__/config.cpython-36.pyc
-__pycache__/gdm.cpython-35.pyc
-__pycache__/gdm.cpython-36.pyc
-__pycache__/train.cpython-35.pyc
-__pycache__/train.cpython-36.pyc
-dqn/__pycache__/agent.cpython-35.pyc
-dqn/__pycache__/agent.cpython-36.pyc
-dqn/__pycache__/environment.cpython-35.pyc
-dqn/__pycache__/environment.cpython-36.pyc
-dqn/__pycache__/history.cpython-35.pyc
-dqn/__pycache__/history.cpython-36.pyc
-dqn/__pycache__/replay_memory.cpython-35.pyc
-dqn/__pycache__/replay_memory.cpython-36.pyc
-dqn/__pycache__/utils.cpython-35.pyc
-dqn/__pycache__/utils.cpython-36.pyc
+.vscode/*
+__pycache__/*
+dqn/__pycache__/*
 log/.DS_Store
-log/events.out.tfevents.1539234443.Motki-Maruyama-MacBook-Pro.local
-log/PongNoFrameskip-v3_lookahead_1/.DS_Store
-log/PongNoFrameskip-v3_lookahead_1/events.out.tfevents.1539596052.Motki-Maruyama-MacBook-Pro.local
+log/*
 tflib/.DS_Store
-tflib/__pycache__/__init__.cpython-36.pyc
+tflib/__pycache__/*
 tflib/nn/.DS_Store
-tflib/nn/__pycache__/__init__.cpython-35.pyc
-tflib/nn/__pycache__/__init__.cpython-36.pyc
-tflib/nn/__pycache__/batchnorm.cpython-35.pyc
-tflib/nn/__pycache__/batchnorm.cpython-36.pyc
-tflib/nn/__pycache__/conv2d.cpython-35.pyc
-tflib/nn/__pycache__/conv2d.cpython-36.pyc
-tflib/nn/__pycache__/deconv2d.cpython-35.pyc
-tflib/nn/__pycache__/deconv2d.cpython-36.pyc
-tflib/nn/__pycache__/linear.cpython-35.pyc
-tflib/nn/__pycache__/linear.cpython-36.pyc
-tflib/nn/__pycache__/sn.cpython-35.pyc
+tflib/nn/__pycache__/*
+
+gif/*
+video/*
+subgoal/*
